Version 1.0.56 (Build 2023092600)
- fix for incorrect language-locale for Norwegian
- fix for SSML voice option display in listen and speak (and related)

Version 1.0.55 (Build 2023072301)
- fix for activity description on < M4.0 versions Moodle

Version 1.0.54 (Build 2023072300)
- added step submitted event

Version 1.0.53 (Build 2023061600)
 - fixed colors for gapfills
 - fixed iframe width

Version 1.0.52 (Build 2023051300)
 - fixed bug in viewstart and viewend DB entries (can kill a restore)
 - Moodle 4.2 support

Version 1.0.52 (Build 2023051300)
 - fixed bug in viewstart and viewend DB entries (can kill a restore)

Version 1.0.51 (Build 20230412XX)
- Added three gapfill question types

Version 1.0.51 (Build 2023040400)
- Fixed bug in listen and repeat where the prompt and response were different. It would not recognize the correct response

Version 1.0.50 (Build 2023031700)
- Added RTL support for Hebrew, Arabic (and Farsi but no TTS)
- Added TTS Voices for Tamil, Telegu, Hebrew and Indonesian

Version 1.0.49(Build 2023022701);
- Quite a large code refactor
- Added attempt submitted event
- Added TTS Passage content type
- Added several new item types, not yet complete ..so hidden
- Added end of speech detection for guided speech recorder
- Fixed some bugs with TTS Dialog and AWS region selection

Version 1.0.47(Build 2022120200)
- Fixed missing lang strings

Version 1.0.46(Build 2022112700)
- Added Dutch Belgian (and other) voices

Version 1.0.45 (Build 2022100700)
- removed unneeded lang strings

Version 1.0.44(2022082200)
- Fixed issue with Arabic Voice "Zeina" not working
- Added 2 new Arabic voices

Version 1.0.43(2022073100)
- Fixed issue with shortanswer grading most answers as correct
- Fixed issue with TTS Dialog Voice C not working

Version 1.0.42(Build 2022060500)
 - Added better free trial link
 - Rebuilt JS for < M3.8

Version 1.0.41(Build 2022053100)
 - added some styling to text block in content area