@@ -317,6 +317,7 @@ const M_LANG_UKUA ='uk-UA';
 const M_LANG_EUES ='eu-ES';
 const M_LANG_FIFI ='fi-FI';
 const M_LANG_HUHU='hu-HU';
+const M_LANG_MINZ ='mi-NZ';
 
 const M_PROMPT_SEPARATE=0;
 const M_PROMPT_RICHTEXT=1;
